tidying documentation and updating metadata

--- a/vignettes/NetFunrankR.Rmd
+++ b/vignettes/NetFunrankR.Rmd
@@ -40,6 +40,7 @@ library(dplyr)
 library(data.table)
 library(ggplot2)
 library(NetFunrankR)
+outdir <- "./NetFunrankR_results/"
 ```
 
 ### Load example disease genes
@@ -58,7 +59,7 @@ NetFunrankR_wrapper(
   disease_genes = COPD_proteinCodingGenes,
   PathwayRanker_Type = "Both",
   nPermute = 10,
-  outdir = "./NetFunrankR_Results/"
+  outdir = outdir
 )
 ```
 
@@ -66,36 +67,36 @@ NetFunrankR_wrapper(
 #### Number of significantly enriched terms/pathways
 This venn diagram shows counts of significantly enriched terms/pathways by the two methods
 ```{r out.width="100%", out.height="100%", message=F, warning=F}
-load("./NetFunrankR_results/CommonFunctions_ORA_TW.vennplt.obj.RData")
+load(paste0(outdir, "CommonFunctions_ORA_TW.vennplt.obj.RData"))
 common.terms.vennplt.obj
 ```
 
 #### Significantly enriched terms/pathways
 This plot shows the terms/pathways that are significantly enriched (`pvalue < 0.05`) and commonly found between Network-Proximity based and Over-representation based methods
 ```{r out.width="100%", out.height="100%", message=F, warning=F}
-load("./NetFunrankR_results/CommonFunctions_ORA_TW.barplt.obj.RData")
+load(paste0(outdir,"CommonFunctions_ORA_TW.barplt.obj.RData"))
 common.terms.barplt.obj
 ```
 
 #### Exclusive terms/pathways found by ORA
 This plot shows the terms/pathways that are exclusively enriched (`pvalue < 0.05`) via ORA method
 ```{r out.width="100%", out.height="100%", message=F, warning=F}
-load("./NetFunrankR_results/Only_ORA_terms.plt.obj.RData")
+load(paste0(outdir,"Only_ORA_terms.plt.obj.RData"))
 only_ORA_terms.plt.obj
 ```
 
 #### Exclusive terms/pathways found by TW
 This plot shows the terms/pathways that are exclusively enriched (`pvalue < 0.05`) via TW method
 ```{r out.width="100%", out.height="100%", message=F, warning=F}
-load("./NetFunrankR_results/Only_TW_terms.plt.obj.RData")
+load(paste0(outdir,"Only_TW_terms.plt.obj.RData"))
 only_TW_terms.plt.obj
 ```
 ### Further configuration of results
 The enrichment results from both the methods can be further controlled based on filtering `p.adjust < 0.05` instead of the nominal `pvalue`. 
 
 ```{r}
-    rankedPathways_ORA <- fread("NetFunrankR_results/KEGG_PE_ORA_result.csv")
-    rankedPathways_TW <- fread("NetFunrankR_results/KEGG_PE_TopoAw_result.csv")
+    rankedPathways_ORA <- fread(paste0(outdir,"KEGG_PE_ORA_result.csv"))
+    rankedPathways_TW <- fread(paste0(outdir,"KEGG_PE_TopoAw_result.csv"))
     rankedPathways_ORA_filt <- rankedPathways_ORA %>% dplyr::filter(p.adjust < 0.05)
     rankedPathways_TW_filt <- rankedPathways_TW  %>% dplyr::filter(p.adjust < 0.05)
 ```
@@ -131,27 +132,98 @@ p4 <- dplyr::anti_join(
         rankedPathways_ORA_filt,
         by = c("Description" = "Description")) %>%
   plot_lollipop(color_palette = c("#CC8214FF", "#f6e8b1"))
-cowplot::plot_grid(p1,p2,p3,p4,
+p1_p2 <- cowplot::plot_grid(p1,p2,
+                            labels = c("a","b"),
+                            rel_heights = c(5,6),
+                            ncol = 1)
+final_plot <- cowplot::plot_grid(p1_p2,p3,p4,
                    # rel_heights = c(1,1),
-                   # rel_widths = c(1,1), 
-                   labels = c("a", "b", "c", "d"), 
-                   ncol = 2,
+                   rel_widths = c(1,1,1),
+                   labels = c("", "c", "d"), 
+                   ncol = 3,
                    align = "l"
                    )
+# Display the combined plot
+  ggsave(paste0(outdir,"all_plots_combined.pdf"), 
+         plot = final_plot, 
+         # device = cairo_pdf, 
+         width = 20, height = 10, units = "in")
+  final_plot
 ```
 
 ### Performance analysis on smaller input
 With the given disease genes, a wrapper function (`NetFunrankR_wrapper`) can be invoked to run the whole analysis, and the results (reports, plots - both pdf and ggplot2 objects) are saved in a given directory (default: `./NetFunrankR_Results_small/`).
 
 ```{r out.width="100%", out.height="100%", message=F, warning=F}
+outdir <- "./NetFunrankR_Results_small/"
 NetFunrankR_wrapper(
-  disease_genes = COPD_proteinCodingGenes %>% head(6),
+  disease_genes = COPD_proteinCodingGenes %>% base::sample(size = 6, replace = FALSE),
   PathwayRanker_Type = "Both",
   nPermute = 10,
-  outdir = "./NetFunrankR_Results_small/"
+  outdir = outdir
 )
+
 ```
 
+We want to observe if the Network-proximity based enrichment test (TW) performs better than ORA when the input genesets are random and small-sized. 
+
+```{r}
+    rankedPathways_ORA <- fread(paste0(outdir,"KEGG_PE_ORA_result.csv"))
+    rankedPathways_TW <- fread(paste0(outdir,"KEGG_PE_TopoAw_result.csv"))
+    rankedPathways_ORA_filt <- rankedPathways_ORA %>% dplyr::filter(Count > 0) %>% # this is important as sometimes functions with 0 overlap gets a nominal p-value
+      dplyr::filter(pvalue < 0.05)
+    rankedPathways_TW_filt <- rankedPathways_TW  %>% dplyr::filter(pvalue < 0.05)
+```
+
+Then the results can be visualized accordingly.
+
+```{r fig.width=12, fig.height=10, fig.align='center', message=F, warning=F}
+library(ggvenn)
+library(tidyr)
+library(forcats)
+library(ggplot2)
+library(cowplot)
+
+# venn diagram
+p1 <- plot_venn(
+        vec1 = rankedPathways_ORA_filt %>% dplyr::pull(Description),
+        vec2 = rankedPathways_TW_filt %>% dplyr::pull(Description))
+# double-bar plot
+p2 <- dplyr::inner_join(
+        rankedPathways_ORA_filt,
+        rankedPathways_TW_filt,
+        by = "Description") %>%
+  plot_double_bar()
+# exclusive ORA 
+p3 <- dplyr::anti_join(
+        rankedPathways_ORA_filt,
+        rankedPathways_TW_filt,
+        by = c("Description" = "Description")) %>%
+  plot_lollipop(color_palette = c("#616530FF", "#dce58f"))
+# exclusive TW
+p4 <- dplyr::anti_join(
+        rankedPathways_TW_filt,
+        rankedPathways_ORA_filt,
+        by = c("Description" = "Description")) %>%
+  plot_lollipop(color_palette = c("#CC8214FF", "#f6e8b1"))
+p1_p2 <- cowplot::plot_grid(p1,p2,
+                            labels = c("a","b"),
+                            rel_heights = c(5,6),
+                            ncol = 1)
+final_plot <- cowplot::plot_grid(p1_p2,p3,p4,
+                   # rel_heights = c(1,1),
+                   rel_widths = c(1,1,1),
+                   labels = c("", "c", "d"), 
+                   ncol = 3,
+                   align = "l"
+                   )
+# Display the combined plot
+  ggsave(paste0(outdir,"all_plots_combined.pdf"), 
+         plot = final_plot, 
+         # device = cairo_pdf, 
+         width = 20, height = 10, units = "in")
+  final_plot
+```
 
 # Conclusion
 In this vignette, we demonstrated the basic functionality of the NetFunrankR package. We loaded example disease genes, performed both Over-representation (ORA) and topology-aware (TW) network-proximity methods for functional term/pathway enrichment, compare, report and visualize results. For more detailed analysis, refer to the package documentation.
