--- a/README.Rmd
+++ b/README.Rmd
@@ -1,31 +1,36 @@
+---
+output: github_document
+---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
+
+```{r, include = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>",
+  fig.path = "man/figures/README-",
+  out.width = "100%"
+)
+```
 
 # NetFunrankR: an R package for robust functional enrichment test using Network medicine approach and beyond
 
 ## Introduction
+With the given biomarker sets, this package primarily facilitates the following analysis:
+1. **Topology-aware enrichment**: Network-proximity based functional enrichment test utilizing protein-protein interaction network
+2. **Over-representation enrichment** Typical hypergeometric-distribution based over-representation test 
 
-With the given biomarker sets, this package primarily facilitates the
-following analysis: 1. **Topology-aware enrichment**: Network-proximity
-based functional enrichment test utilizing protein-protein interaction
-network 2. **Over-representation enrichment** Typical
-hypergeometric-distribution based over-representation test
-
-Results include two spreadsheets, one for ORA-based test, and another
-for TW-based test. Visualization includes, a venn diagram, double-bar
-plots and two lollipop plots. This document shows the basic usage of
-this package:
+Results include two spreadsheets, one for ORA-based test, and another for TW-based test. Visualization includes, a venn diagram, double-bar plots and two lollipop plots.
+This document shows the basic usage of this package:
 
 ## Installation
-
-``` r
+```r
 library(devtools)
 install_github("Akmazad/NetFunrankR")
 ```
 
-### Load Package
-
-``` r
+### Load Package 
+```r
 library(dplyr)
 library(data.table)
 library(ggplot2)
@@ -33,22 +38,17 @@ library(NetFunrankR)
 ```
 
 ### Load example disease genes
+The package comes with an example vector of disease genes (COPD) named example_enrich.df. Let's observe the head of this data..
 
-The package comes with an example vector of disease genes (COPD) named
-example_enrich.df. Let’s observe the head of this data..
-
-``` r
+```r
 print(head(COPD_proteinCodingGenes))
 ```
 
+
 ### Perform analysis
+With the given disease genes, a wrapper function (`NetFunrankR_wrapper`) can be invoked to run the whole analysis, and the results (reports, plots - both pdf and ggplot2 objects) are saved in a given directory (default: `./NetFunrankR_Results/`).
 
-With the given disease genes, a wrapper function (`NetFunrankR_wrapper`)
-can be invoked to run the whole analysis, and the results (reports,
-plots - both pdf and ggplot2 objects) are saved in a given directory
-(default: `./NetFunrankR_Results/`).
-
-``` r
+```r
 NetFunrankR_wrapper(
   disease_genes = COPD_proteinCodingGenes,
   PathwayRanker_Type = "Both",
@@ -58,54 +58,37 @@ NetFunrankR_wrapper(
 ```
 
 ### Check results
-
 #### Number of significantly enriched terms/pathways
-
-This venn diagram shows counts of significantly enriched terms/pathways
-by the two methods
-
-``` r
+This venn diagram shows counts of significantly enriched terms/pathways by the two methods
+```r
 load("./NetFunrankR_results/CommonFunctions_ORA_TW.vennplt.obj.RData")
 common.terms.vennplt.obj
 ```
 
 #### Significantly enriched terms/pathways
-
-This plot shows the terms/pathways that are significantly enriched
-(`pvalue < 0.05`) and commonly found between Network-Proximity based and
-Over-representation based methods
-
-``` r
+This plot shows the terms/pathways that are significantly enriched (`pvalue < 0.05`) and commonly found between Network-Proximity based and Over-representation based methods
+```r
 load("./NetFunrankR_results/CommonFunctions_ORA_TW.barplt.obj.RData")
 common.terms.barplt.obj
 ```
 
 #### Exclusive terms/pathways found by ORA
-
-This plot shows the terms/pathways that are exclusively enriched
-(`pvalue < 0.05`) via ORA method
-
-``` r
+This plot shows the terms/pathways that are exclusively enriched (`pvalue < 0.05`) via ORA method
+```r
 load("./NetFunrankR_results/Only_ORA_terms.plt.obj.RData")
 only_ORA_terms.plt.obj
 ```
 
 #### Exclusive terms/pathways found by TW
-
-This plot shows the terms/pathways that are exclusively enriched
-(`pvalue < 0.05`) via TW method
-
-``` r
+This plot shows the terms/pathways that are exclusively enriched (`pvalue < 0.05`) via TW method
+```r
 load("./NetFunrankR_results/Only_TW_terms.plt.obj.RData")
 only_TW_terms.plt.obj
 ```
-
 ### Further configuration of results
+The enrichment results from both the methods can be further controlled based on filtering `p.adjust < 0.05` instead of the nominal `pvalue`. 
 
-The enrichment results from both the methods can be further controlled
-based on filtering `p.adjust < 0.05` instead of the nominal `pvalue`.
-
-``` r
+```r
     rankedPathways_ORA <- fread("NetFunrankR_results/KEGG_PE_ORA_result.csv")
     rankedPathways_TW <- fread("NetFunrankR_results/KEGG_PE_TopoAw_result.csv")
     rankedPathways_ORA_filt <- rankedPathways_ORA %>% dplyr::filter(p.adjust < 0.05)
@@ -114,7 +97,7 @@ based on filtering `p.adjust < 0.05` instead of the nominal `pvalue`.
 
 Then the results can be visualized accordingly.
 
-``` r
+```r
 library(ggvenn)
 library(tidyr)
 library(forcats)
@@ -153,13 +136,9 @@ cowplot::plot_grid(p1,p2,p3,p4,
 ```
 
 ### Performance analysis on smaller input
+With the given disease genes, a wrapper function (`NetFunrankR_wrapper`) can be invoked to run the whole analysis, and the results (reports, plots - both pdf and ggplot2 objects) are saved in a given directory (default: `./NetFunrankR_Results_small/`).
 
-With the given disease genes, a wrapper function (`NetFunrankR_wrapper`)
-can be invoked to run the whole analysis, and the results (reports,
-plots - both pdf and ggplot2 objects) are saved in a given directory
-(default: `./NetFunrankR_Results_small/`).
-
-``` r
+```r
 NetFunrankR_wrapper(
   disease_genes = COPD_proteinCodingGenes %>% head(6),
   PathwayRanker_Type = "Both",
@@ -168,11 +147,7 @@ NetFunrankR_wrapper(
 )
 ```
 
-# Conclusion
 
-In this page, we demonstrated the basic functionality of the NetFunrankR
-package. We loaded example disease genes, performed both
-Over-representation (ORA) and topology-aware (TW) network-proximity
-methods for functional term/pathway enrichment, compare, report and
-visualize results. For more detailed analysis, refer to the package
-documentation.
+# Conclusion
+In this page, we demonstrated the basic functionality of the NetFunrankR package. We loaded example disease genes, performed both Over-representation (ORA) and topology-aware (TW) network-proximity methods for functional term/pathway enrichment, compare, report and visualize results. For more detailed analysis, refer to the package documentation.
+
