--- a/README.Rmd
+++ b/README.Rmd
@@ -25,6 +25,7 @@ This document shows the basic usage of this package:
 
 ## Installation
 ```r
+BiocManager::install("EnsDb.Hsapiens.v75")
 library(devtools)
 install_github("Akmazad/NetFunrankR")
 ```
